<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FestaritActivity"
    android:background="@drawable/img_3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout


            android:layout_width="320dp"
            android:layout_height="640dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/BlockBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/blockfest_2023"

                />

            <Button
                android:id="@+id/FolkBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Bättre Folk" />

            <Button
                android:id="@+id/DownBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Down By The Laituri" />

            <Button
                android:id="@+id/FlowBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/flow_festival" />

            <Button
                android:id="@+id/HimosBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/himos_juhannus_2023" />

            <Button
                android:id="@+id/IloBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Ilovaari 2023" />

            <Button
                android:id="@+id/KarjuBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Karjurock" />

            <Button
                android:id="@+id/KotkanBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/kotkan_merip_iv_t" />

            <Button
                android:id="@+id/NummirockBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/nummirock_metal_festival" />

            <Button
                android:id="@+id/PikiBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Pikipop 2023" />

            <Button
                android:id="@+id/ProvinssiBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/provinssi_2023" />

            <Button
                android:id="@+id/QstockBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/qstock_2023" />

            <Button
                android:id="@+id/RockfestBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/rockfest_2023" />

            <Button
                android:id="@+id/RuisBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/ruisrock_2023" />

            <Button
                android:id="@+id/SidewaysBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Sideways 2023" />

            <Button
                android:id="@+id/TuskaBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="@string/tuska_festival" />

            <Button
                android:id="@+id/WeekendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#B40486"
                android:text="Weekend Festival 2023" />

            <Button
                android:id="@+id/BackBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#1C1C1C"
                android:text="Takaisin" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>